Badges logic changed get games modal button radius changed Left meny design changed left menu sliding logic fixed new syndicate page spelling mistake fixed my syndicate page spelling mistakes fixed offer buy page redirection for webview in case of no toekn existed offer of the day page button radius play game design changes for progress bar and badges get game booster button radius changes no syndicate case of winning changed the font size on smaller screen recent winner tips response issue fixed your voucher page button radius changes your offers tab slider bottom space fixed

--- a/src/pages/play-games/play-games.scss
+++ b/src/pages/play-games/play-games.scss
@@ -1,7 +1,6 @@
 
 .orange-bg{
   background-color: #F27A18;
-  height: 30%;
 }
 @keyframes pulse_animation {
 	0% { transform: scale(1); }
@@ -72,7 +71,8 @@ font-weight: 600;
     width: 36.3%;
 }
 .pagination .col-xs-3 {
-    width: 35.3%;
+	width: 35.3%;
+	margin-left:1.3%;
 }
 .pagination .col-xs-2{
  width: 30.3%;
@@ -222,7 +222,7 @@ font-weight: 600;
 .badgesContainer{
 	display: inline-flex;
 	background-color: #F27A18;
-	// height: 115px; 
+	//height: 115px; 
 	bottom: 31px;
 	position: relative;
 }
